adds placeholder html to make sure css styling works correctly pre-render function. shows bulletin of posts

--- a/index.html
+++ b/index.html
@@ -40,7 +40,23 @@
 
         <main>
             <p id="error-display" class="error"></p>
-            <ul id="post-list"></ul>
+
+            <ul id="post-list">
+                <li>
+                    <h2>title</h4>
+                    <span>🐱‍💻</span>
+                    <p>lets have a party, its going to be very saucy, bring dip. we want pizza we also want sweet stuff, lots of sweet stuff</p>
+                    <p>503-867-5309</p>
+                </li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
         </main>
     </body>
 </html>
