--- a/post-editor/index.html
+++ b/post-editor/index.html
@@ -36,7 +36,7 @@
             <p class="title">Supabase Web App</p>
             <nav>
                 <a href="/">Home</a>
-                <a id="sign-out-link" href="auth">Sign Out</a>
+                <a id="sign-out-link" href="../auth">Sign Out</a>
             </nav>
         </header>
 
