adds all static post items as initial placeholders for the bulletin, each uses the correct emojis for the categories that will be displayed

--- a/index.html
+++ b/index.html
@@ -43,19 +43,33 @@
 
             <ul id="post-list">
                 <li>
-                    <h2>title</h4>
-                    <span>🐱‍💻</span>
-                    <p>lets have a party, its going to be very saucy, bring dip. we want pizza we also want sweet stuff, lots of sweet stuff</p>
+                    <h2>My Cat</h4>
+                    <span>😺</span>
+                    <p>this cat is crazy, someone help me</p>
+                    <img src="/assets/placeholder-image.png" alt="">
                     <p>503-867-5309</p>
                 </li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>
+                    <h2>HTML</h2>
+                    <span>💻</span>
+                    <p>I need help with symantic HTML, where can I get a tutor?</p>
+                    <img src="/assets/placeholder-image.png" alt="">
+                    <p>beepboop@boop.com</p>
+                </li>
+                <li>
+                    <h2>Graduation!!!!</h2>
+                    <span>🎉</span>
+                    <p>The cohort deserves the most epic of pizza parties, let us meet and consume lots of pizza</p>
+                    <img src="/assets/placeholder-image.png" alt="">
+                    <p>off the grid</p>
+                </li>
+                <li>
+                    <h2>mashed potatoes</h2>
+                    <span>🍗</span>
+                    <p>I have quite the recipe for some mashed potatoes, hit me up for the recipe</p>
+                    <img src="/assets/placeholder-image.png" alt="">
+                    <p>541-235-1234</p>
+                </li>
             </ul>
         </main>
     </body>
